--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <label for="plain_text" class="light">Plain text</label><br>
                     </div>
 
-                    <label for="textarea" class="light" id="topics">Other topics you&#39;d like to hear about</label>
+                    <label for="topics" class="light">Other topics you&#39;d like to hear about</label>
                     <textarea id="topics" name="user_topics"></textarea>
                     
                     <button type="submit">Sign Up</button>
